--- a/streamlit_model_full.ipynb
+++ b/streamlit_model_full.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,18 +89,7 @@
        "      <th>stays_in_weekend_nights</th>\n",
        "      <th>stays_in_week_nights</th>\n",
        "      <th>adults</th>\n",
-       "      <th>children</th>\n",
-       "      <th>babies</th>\n",
-       "      <th>meal</th>\n",
-       "      <th>country</th>\n",
-       "      <th>market_segment</th>\n",
-       "      <th>distribution_channel</th>\n",
-       "      <th>is_repeated_guest</th>\n",
-       "      <th>previous_cancellations</th>\n",
-       "      <th>previous_bookings_not_canceled</th>\n",
-       "      <th>reserved_room_type</th>\n",
-       "      <th>assigned_room_type</th>\n",
-       "      <th>booking_changes</th>\n",
+       "      <th>...</th>\n",
        "      <th>deposit_type</th>\n",
        "      <th>agent</th>\n",
        "      <th>company</th>\n",
@@ -126,18 +115,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>PRT</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
        "      <td>No Deposit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -161,18 +139,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>PRT</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C</td>\n",
-       "      <td>4</td>\n",
+       "      <td>...</td>\n",
        "      <td>No Deposit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -196,18 +163,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>GBR</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>Direct</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>No Deposit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -231,18 +187,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>GBR</td>\n",
-       "      <td>Corporate</td>\n",
-       "      <td>Corporate</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>No Deposit</td>\n",
        "      <td>304.0</td>\n",
        "      <td>NaN</td>\n",
@@ -266,18 +211,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>GBR</td>\n",
-       "      <td>Online TA</td>\n",
-       "      <td>TA/TO</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>No Deposit</td>\n",
        "      <td>240.0</td>\n",
        "      <td>NaN</td>\n",
@@ -291,20 +225,56 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          hotel  is_canceled  ...  reservation_status  reservation_status_date\n",
-       "0  Resort Hotel            0  ...           Check-Out               2015-07-01\n",
-       "1  Resort Hotel            0  ...           Check-Out               2015-07-01\n",
-       "2  Resort Hotel            0  ...           Check-Out               2015-07-02\n",
-       "3  Resort Hotel            0  ...           Check-Out               2015-07-02\n",
-       "4  Resort Hotel            0  ...           Check-Out               2015-07-03\n",
+       "          hotel  is_canceled  lead_time  arrival_date_year arrival_date_month  \\\n",
+       "0  Resort Hotel            0        342               2015               July   \n",
+       "1  Resort Hotel            0        737               2015               July   \n",
+       "2  Resort Hotel            0          7               2015               July   \n",
+       "3  Resort Hotel            0         13               2015               July   \n",
+       "4  Resort Hotel            0         14               2015               July   \n",
+       "\n",
+       "   arrival_date_week_number  arrival_date_day_of_month  \\\n",
+       "0                        27                          1   \n",
+       "1                        27                          1   \n",
+       "2                        27                          1   \n",
+       "3                        27                          1   \n",
+       "4                        27                          1   \n",
+       "\n",
+       "   stays_in_weekend_nights  stays_in_week_nights  adults  ...  deposit_type  \\\n",
+       "0                        0                     0       2  ...    No Deposit   \n",
+       "1                        0                     0       2  ...    No Deposit   \n",
+       "2                        0                     1       1  ...    No Deposit   \n",
+       "3                        0                     1       1  ...    No Deposit   \n",
+       "4                        0                     2       2  ...    No Deposit   \n",
+       "\n",
+       "   agent company days_in_waiting_list customer_type   adr  \\\n",
+       "0    NaN     NaN                    0     Transient   0.0   \n",
+       "1    NaN     NaN                    0     Transient   0.0   \n",
+       "2    NaN     NaN                    0     Transient  75.0   \n",
+       "3  304.0     NaN                    0     Transient  75.0   \n",
+       "4  240.0     NaN                    0     Transient  98.0   \n",
+       "\n",
+       "   required_car_parking_spaces  total_of_special_requests  reservation_status  \\\n",
+       "0                            0                          0           Check-Out   \n",
+       "1                            0                          0           Check-Out   \n",
+       "2                            0                          0           Check-Out   \n",
+       "3                            0                          0           Check-Out   \n",
+       "4                            0                          1           Check-Out   \n",
+       "\n",
+       "  reservation_status_date  \n",
+       "0              2015-07-01  \n",
+       "1              2015-07-01  \n",
+       "2              2015-07-02  \n",
+       "3              2015-07-02  \n",
+       "4              2015-07-03  \n",
        "\n",
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -551,20 +521,78 @@
        "</div>"
       ],
       "text/plain": [
-       "         is_canceled  ...  total_of_special_requests\n",
-       "count  119390.000000  ...              119390.000000\n",
-       "mean        0.370416  ...                   0.571363\n",
-       "std         0.482918  ...                   0.792798\n",
-       "min         0.000000  ...                   0.000000\n",
-       "25%         0.000000  ...                   0.000000\n",
-       "50%         0.000000  ...                   0.000000\n",
-       "75%         1.000000  ...                   1.000000\n",
-       "max         1.000000  ...                   5.000000\n",
+       "         is_canceled      lead_time  arrival_date_year  \\\n",
+       "count  119390.000000  119390.000000      119390.000000   \n",
+       "mean        0.370416     104.011416        2016.156554   \n",
+       "std         0.482918     106.863097           0.707476   \n",
+       "min         0.000000       0.000000        2015.000000   \n",
+       "25%         0.000000      18.000000        2016.000000   \n",
+       "50%         0.000000      69.000000        2016.000000   \n",
+       "75%         1.000000     160.000000        2017.000000   \n",
+       "max         1.000000     737.000000        2017.000000   \n",
        "\n",
-       "[8 rows x 20 columns]"
+       "       arrival_date_week_number  arrival_date_day_of_month  \\\n",
+       "count             119390.000000              119390.000000   \n",
+       "mean                  27.165173                  15.798241   \n",
+       "std                   13.605138                   8.780829   \n",
+       "min                    1.000000                   1.000000   \n",
+       "25%                   16.000000                   8.000000   \n",
+       "50%                   28.000000                  16.000000   \n",
+       "75%                   38.000000                  23.000000   \n",
+       "max                   53.000000                  31.000000   \n",
+       "\n",
+       "       stays_in_weekend_nights  stays_in_week_nights         adults  \\\n",
+       "count            119390.000000         119390.000000  119390.000000   \n",
+       "mean                  0.927599              2.500302       1.856403   \n",
+       "std                   0.998613              1.908286       0.579261   \n",
+       "min                   0.000000              0.000000       0.000000   \n",
+       "25%                   0.000000              1.000000       2.000000   \n",
+       "50%                   1.000000              2.000000       2.000000   \n",
+       "75%                   2.000000              3.000000       2.000000   \n",
+       "max                  19.000000             50.000000      55.000000   \n",
+       "\n",
+       "            children         babies  is_repeated_guest  \\\n",
+       "count  119386.000000  119390.000000      119390.000000   \n",
+       "mean        0.103890       0.007949           0.031912   \n",
+       "std         0.398561       0.097436           0.175767   \n",
+       "min         0.000000       0.000000           0.000000   \n",
+       "25%         0.000000       0.000000           0.000000   \n",
+       "50%         0.000000       0.000000           0.000000   \n",
+       "75%         0.000000       0.000000           0.000000   \n",
+       "max        10.000000      10.000000           1.000000   \n",
+       "\n",
+       "       previous_cancellations  previous_bookings_not_canceled  \\\n",
+       "count           119390.000000                   119390.000000   \n",
+       "mean                 0.087118                        0.137097   \n",
+       "std                  0.844336                        1.497437   \n",
+       "min                  0.000000                        0.000000   \n",
+       "25%                  0.000000                        0.000000   \n",
+       "50%                  0.000000                        0.000000   \n",
+       "75%                  0.000000                        0.000000   \n",
+       "max                 26.000000                       72.000000   \n",
+       "\n",
+       "       booking_changes          agent      company  days_in_waiting_list  \\\n",
+       "count    119390.000000  103050.000000  6797.000000         119390.000000   \n",
+       "mean          0.221124      86.693382   189.266735              2.321149   \n",
+       "std           0.652306     110.774548   131.655015             17.594721   \n",
+       "min           0.000000       1.000000     6.000000              0.000000   \n",
+       "25%           0.000000       9.000000    62.000000              0.000000   \n",
+       "50%           0.000000      14.000000   179.000000              0.000000   \n",
+       "75%           0.000000     229.000000   270.000000              0.000000   \n",
+       "max          21.000000     535.000000   543.000000            391.000000   \n",
+       "\n",
+       "                 adr  required_car_parking_spaces  total_of_special_requests  \n",
+       "count  119390.000000                119390.000000              119390.000000  \n",
+       "mean      101.831122                     0.062518                   0.571363  \n",
+       "std        50.535790                     0.245291                   0.792798  \n",
+       "min        -6.380000                     0.000000                   0.000000  \n",
+       "25%        69.290000                     0.000000                   0.000000  \n",
+       "50%        94.575000                     0.000000                   0.000000  \n",
+       "75%       126.000000                     0.000000                   1.000000  \n",
+       "max      5400.000000                     8.000000                   5.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +699,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +753,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -879,12 +907,12 @@
     "pipe.fit(X_train, y_train)\n",
     "\n",
     "# Save trained model using joblib\n",
-    "joblib.dump(pipe, 'cancellation.pkl')"
+    "joblib.dump(pipe, 'cancellation.pkl', compress=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -994,12 +1022,12 @@
     "pipe.fit(X_train, y_train)\n",
     "\n",
     "# Save trained model using joblib\n",
-    "joblib.dump(pipe, 'pricing.pkl')"
+    "joblib.dump(pipe, 'pricing.pkl', compress=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
